src/popup/popup.css
body {
  color: black;
  font-family: "Inter", sans-serif;
  background-color: #f2f2f7;
  font-size: 0.8rem;
  border-radius: 50px;
  margin: 0px;
}
#main-content {
  margin: 8px;
}

.switch {
  position: relative;
  display: inline-block;
  width: 45px;
  height: 24px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
}

.slider:before {
  position: absolute;
  content: "";
  height: 20px;
  width: 20px;
  left: 2px;
  bottom: 2px;
  background-color: white;
}

input:checked + .slider {
  background-color: #34c759;
}

input:checked + .slider:before {
  transform: translateX(20px);
}

.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

.option-container {
  display: flex;
  margin-bottom: 15px;
}

.popup-container {
  width: 550px;
}

.label-desc {
  height: 2rem;
  font-size: 1.1rem;
  font-weight: 600;
  display: flex;
  align-items: center;
}

.label-container {
  display: flex;
  flex-direction: column;
  margin-left: 20px;
}

.desc {
  margin: 0;
  font-size: 0.8rem;
  font-weight: 600;
  color: #3c3c43;
  text-align: center;
}

.toggle-container {
  height: 2rem;
  display: flex;
  align-items: center;
}

.checkbox-desc {
  margin-left: 5px;
}

.hover-check {
  display: flex;
  align-items: center;
  margin-left: 0px;
}

.hover-checkbox {
  margin-left: 0px;
  margin-right: 0px;
}

.btn {
  border-radius: 6px;
  padding: 10px 10px;
  color: white;
  font-weight: 600;
  cursor: pointer;
  margin: 5px;
  border: none;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.common-btn {
  background-color: #007bff;
}

.add-domain-btn {
  background-color: #34c759;
  margin-right: 0px;
}

.domain-input-area {
  display: flex;
  align-items: center;
  margin: 0px 8px;
}

#domainInput {
  font-size: 15px;
  height: 20px;
  padding: 5px;
  width: 100%;
}

.header {
  display: flex;
  justify-content: space-between;
}

.hide {
  display: none;
}

#whitelist {
  padding: 0;
}

#whitelist li {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 5px 0;
  font-weight: 400;
  font-size: 1.2rem;
  height: 1.8rem;
  margin: 0px 8px;
}

#btn-return {
  margin-left: 8px;
  margin-top: 8px;
}

#btn-show-whitelist {
  margin-right: 0px;
}

.remove-btn {
  background-color: #ff3a30;
  margin-right: 0px;
}

.list-header {
  margin: 0px 8px;
}

hr {
  margin: 0px 8px;
}

#whitelisted-site {
  text-align: center;
}

#whitelistedSitesList {
  list-style-type: none;
  padding: 0px;
  border: none;
  outline: none;
  box-shadow: none;
  margin-left: 5px;
  max-height: 200px;
  overflow-y: auto;
}

.text-image-svg {
  height: 0.7rem;
  fill: white;
  margin-right: 3px;
}

#whitelistedSitesList::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

#whitelistedSitesList::-webkit-scrollbar-track {
  background: #f1f1f1;
  border-radius: 10px;
}

#whitelistedSitesList::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 10px;
  transition: background 0.3s;
}

#whitelistedSitesList:hover::-webkit-scrollbar-thumb {
  background: #555;
}

@media (prefers-color-scheme: dark) {
  body {
    color: white;
    background-color: #2c2c2eff;
  }

  .slider {
    background-color: #545458;
  }

  input:checked + .slider {
    background-color: #30d158;
  }

  .slider:before {
    background-color: #ffffff;
  }

  .desc {
    color: #ebebf5;
  }

  .hide {
    display: none;
  }

  .common-btn {
    background-color: #0a84ff;
  }

  .remove-btn {
    background-color: #ff443a;
  }

  .add-domain-btn {
    background-color: #30d158;
  }
}

.animate .slider,
.animate .slider:before {
  transition: 0.4s;
}

.disabled-text {
  color: #8e8e93;
}

.disabled-background {
  background-color: #8e8e93;
}

input:checked:disabled + .slider {
  background-color: #8e8e93;
}

